# AnotherLLMBot

./: .gitignore  LICENSE  README.md  bot_x.py  demo.py  main.py  pyproject.toml  template_config.toml
nonebot_src/plugins/chat_llm/: __init__.py  config.py
src/: chat_bot.py  config_loader.py  demo.py  topic_identifier.py
src/k_llm/: models.py  prompt_templates.py  rag.py  tools.py
