[project]
name = "anotherllmbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.20",
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi,websockets]>=2.4.2",
    "unstructured[md,pdf]>=0.17.2",
]

[dependency-groups]
dev = [
    "nonebot-adapter-console>=0.6.0",
]


[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = ["nonebot_src/plugins/"]
builtin_plugins = []
